--- a/ChessUI/PromotionMenu.xaml
+++ b/ChessUI/PromotionMenu.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ChessUI.PromotionMenu"
+﻿<UserControl x:Class="ChessUI.PromotionMenu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -23,4 +23,4 @@
                 </UniformGrid>
             </Grid>
         </Border>
-</Window>
+</UserControl>
