--- a/ChessUI/MainWindow.xaml
+++ b/ChessUI/MainWindow.xaml
@@ -27,6 +27,8 @@
             <UniformGrid x:Name="PieceGrid"
                          Rows="8"
                          Columns="8" d:IsHidden="True"/>
+
+            <ContentControl x:Name="MenuContainer"/>
         </Grid>
     </Viewbox>
 </Window>
