Added MainMenuUI Created Options Folder

--- a/ChessUI/MainWindow.xaml
+++ b/ChessUI/MainWindow.xaml
@@ -29,6 +29,8 @@
                          Columns="8" d:IsHidden="True"/>
 
             <ContentControl x:Name="MenuContainer"/>
+
+            <local:StartMenu x:Name="StartMenuControl" />
         </Grid>
     </Viewbox>
 </Window>
