--- a/ChessUI/MainWindow.xaml
+++ b/ChessUI/MainWindow.xaml
@@ -4,39 +4,67 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChessUI"
+        xmlns:controls="clr-namespace:ChessUI.Controls"
         mc:Ignorable="d"
-        d:Width ="600" d:SizeToContent="Height"
-        Icon = "Assets/icon.ico"
+        d:Width="600" d:SizeToContent="Height"
+        Icon="Assets/icon.ico"
         WindowStartupLocation="CenterScreen"
         Background="Black">
 
     <Viewbox>
-        <Grid x:Name ="BoardGrid"
-            Width = "600"
-            Height= "600"
-            MouseDown="BoardGrid_MouseDown">
+        <Grid>
+            <!-- Regular chess board -->
+            <Grid x:Name="RegularChessBoard" Visibility="Visible">
+                <Grid x:Name="BoardGrid"
+                      Width="600"
+                      Height="600"
+                      MouseDown="BoardGrid_MouseDown">
+                    <Grid.Background>
+                        <ImageBrush ImageSource="Assets/Board.png" />
+                    </Grid.Background>
+                    <UniformGrid x:Name="HighlightGrid"
+                                 Rows="8"
+                                 Columns="8" />
+                    <UniformGrid x:Name="PieceGrid"
+                                 Rows="8"
+                                 Columns="8"
+                                 d:IsHidden="True" />
+                    <!-- Main Content Control for hosting StartMenu, Game Settings, etc. -->
+                    <ContentControl x:Name="MainContent">
+                        <!-- Define StartMenu, Game Settings, etc. -->
+                    </ContentControl>
+                    <!-- Secondary Content for smaller menus or dialogs -->
+                    <ContentControl x:Name="MenuContainer">
+                        <!-- Placeholder for additional menus or dialogs -->
+                    </ContentControl>
+                </Grid>
+            </Grid>
 
-            <Grid.Background>
-                <ImageBrush ImageSource="Assets/Board.png"/>
-            </Grid.Background>
-            <UniformGrid x:Name="HighlightGrid"
-                         Rows="8"
-                         Columns="8">
-            </UniformGrid>
-
-            <UniformGrid x:Name="PieceGrid"
-                         Rows="8"
-                         Columns="8" d:IsHidden="True"/>
-
-            <!-- Main Content Control for hosting StartMenu, Game Settings, etc. -->
-            <ContentControl  x:Name="MainContent">
-                <!-- Define StartMenu, Game Settings, etc. -->
-            </ContentControl>
-
-            <!-- Secondary Content for smaller menus or dialogs -->
-            <ContentControl  x:Name="MenuContainer">
-                <!-- Placeholder for additional menus or dialogs -->
-            </ContentControl>
+            <Grid x:Name="HexBoard" Visibility="Collapsed">
+                <Grid x:Name="HexGrid"
+                        Width="600"
+                        Height="600"
+                    MouseDown="BoardGrid_MouseDown">
+                    <Grid.Background>
+                        <ImageBrush ImageSource="Assets/HexBoard.png" />
+                    </Grid.Background>
+                    <UniformGrid x:Name="HexhighlightGrid"
+                     Rows="9"
+                     Columns="9" />
+                    <UniformGrid x:Name="HexPieceGrid"
+                     Rows="9"
+                     Columns="9"
+                     d:IsHidden="True" />
+                    <!-- Main Content Control for hosting StartMenu, Game Settings, etc. -->
+                    <ContentControl x:Name="HexMainContent">
+                        <!-- Define StartMenu, Game Settings, etc. -->
+                    </ContentControl>
+                    <!-- Secondary Content for smaller menus or dialogs -->
+                    <ContentControl x:Name="HexMenuContainer">
+                        <!-- Placeholder for additional menus or dialogs -->
+                    </ContentControl>
+                </Grid>
+            </Grid>
         </Grid>
     </Viewbox>
 </Window>
